[package]
name = "foxdir"
version = "0.1.0"
edition = "2024"
authors = ["Dhiraj Lande <landedhiraj928@gmail.com>"]
description = "A colorful Rust CLI tool to inspect directories with table or JSON output."

[dependencies]
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.51", features = ["derive"] }
owo-colors = "4.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tabled = "0.20.0"
